--- a/css/Customization.css
+++ b/css/Customization.css
@@ -57,9 +57,9 @@ a {
 body {
     background-image: url(../images/Custom_block/Frame\ 37.svg);
     /* background-size:cover; */
-    background-position: center;
+    background-position: top center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: auto;
     /* width: 100%;
     height: auto; */
 }
@@ -83,9 +83,10 @@ body {
 #menu_id a {
     margin: 0 24px;
     color: #6B3B20;
+    font-size: 20px;
 }
 
-#menu_id_li a:hover {
+#menu_id li a:hover {
     color: #F1BFC1;
 }
 
@@ -97,6 +98,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 20px;
 }
 
 #customized:hover {
@@ -157,6 +159,8 @@ body {
     display: flex;
     justify-content: center;
     margin-top: 16.5px;
+    font-size: 24px;
+    /* font-family: Noto Serif TC ,sans-serif; */
 }
 
 
@@ -204,6 +208,7 @@ body {
     display: flex;
     justify-content: center;
     margin-top: 16.5px;
+    font-size: 24px;
 }
 
 .left_menu2_div1 {
@@ -236,6 +241,10 @@ body {
 
 }
 
+#left_menu2_hr {
+    padding: 0 40px;
+}
+
 
 /* 第三層 */
 .left_menu3 {
@@ -249,6 +258,8 @@ body {
     position: absolute;
     margin-left: 80px;
     display: none;
+    /* overflow: hidden; */
+    /* overflow: auto; */
 }
 
 .left_menu3_p {
@@ -257,6 +268,7 @@ body {
     margin-top: 16.5px;
     margin-bottom: 18px;
     color: #3F1A09;
+    font-size: 24px;
 }
 
 .left_menu3_div_input {
@@ -276,6 +288,7 @@ body {
     justify-content: center;
     margin-top: 12px;
     color: #6B3B20;
+    font-size: 15px;
 }
 
 .left_menu3 ul {
@@ -287,6 +300,49 @@ body {
 .left_menu3 li p {
     color: #6B3B20;
 }
+
+#left_menu3_div3_div {
+    display: flex;
+    flex-direction: column;
+}
+
+#left_menu3_div3_div p {
+    display: flex;
+    justify-content: center;
+}
+
+
+#left_menu3_div3_div div {
+    display: flex;
+    justify-content: center;
+    /* justify-content: space-between; */
+    flex-wrap: wrap;
+    margin: 0 18px;
+}
+
+#left_menu3_div3_div p {
+    margin-top: 9px;
+    font-size: 15px;
+}
+
+
+#left_menu3_div3_div a {
+    margin-right: 20px;
+    margin-bottom: 27px;
+    margin-top: 12px;
+}
+
+
+#left_menu3_div3_div img {
+    width: 62px;
+    height: 62px;
+}
+
+#left_menu3_hr {
+    padding: 0 40px;
+}
+
+
 
 /* 第四層 */
 .left_menu4 {
@@ -307,6 +363,7 @@ body {
     justify-content: center;
     margin-top: 16.5px;
     margin-bottom: 18px;
+    font-size: 24px;
 }
 
 .left_menu4_div_input {
@@ -340,6 +397,7 @@ body {
     border-radius: 10px;
     background-color: #F1BFC1;
     margin-right: 20px;
+    font-size: 15px;
 }
 
 .left_menu4_search_p_2 {
@@ -352,6 +410,7 @@ body {
     border-radius: 10px;
     background-color: #F1BFC1;
     margin-right: 20px;
+    font-size: 15px;
 }
 
 .left_menu4_search_p_3 {
@@ -364,16 +423,19 @@ body {
     border-radius: 10px;
     background-color: #F1BFC1;
     margin-right: 20px;
+    font-size: 15px;
 }
 
 .left_menu4_in_hr_p {
     margin: 10px;
     display: flex;
     justify-content: center;
+    font-size: 15px;
 }
 
 .left_menu4_img a {
     padding: 10px 10px;
+    margin-right: 20px;
     /* padding: 0 20px 30px 20px; */
     /* padding-bottom: 30px; */
 }
@@ -384,6 +446,10 @@ body {
     justify-content: center;
     /* margin: 20px 30px; */
     flex-wrap: wrap;
+}
+
+#left_menu4_hr {
+    padding: 0 40px;
 }
 
 
@@ -406,6 +472,7 @@ body {
     justify-content: center;
     margin-top: 16.5px;
     margin-bottom: 28px;
+    font-size: 24px;
 }
 
 .left_menu4_img {
@@ -447,7 +514,7 @@ body {
     max-width: 39px;
     max-height: 66px;
     position: absolute;
-    right: -25px;
+    right: -30px;
     top: -5px;
     display: none;
 }
@@ -526,8 +593,8 @@ body {
     width: 218px;
     height: 218px;
     position: absolute;
-    /* right: 0;
-    bottom: 0; */
+    /* right: 10px; */
+    /* bottom: 0; */
     /* margin-right: 70px; */
     margin-bottom: 20px;
     margin-left: 730px;
@@ -679,8 +746,13 @@ body {
 #Prompt_field img {
     width: 149px;
     height: 153px;
+}
+
+#Prompt_field_img0,
+#Prompt_field_img5 {
     cursor: pointer;
 }
+
 
 /* ↑↑最下方提示欄位↑↑ */
 
@@ -731,10 +803,12 @@ body {
 #select_field1__second_page {
     display: flex;
     flex-direction: column;
-    border: 2px solid #444;
+    width: 341px;
+    height: 508px;
+    border: 0px solid #444;
     border-radius: 0 0 20px 20px;
     background-image: url(../images/Custom_block/background.svg);
-    display: none;
+    /* display: none; */
     position: absolute;
     left: 0;
     top: 0;
@@ -757,6 +831,7 @@ body {
     display: flex;
     justify-content: center;
     margin: 27.5px 141px 45.5px 140px;
+    font-size: 24px;
     font-size: 24px;
 }
 
@@ -787,7 +862,9 @@ body {
 #select_field2__second_page {
     display: flex;
     flex-direction: column;
-    border: 2px solid #444;
+    width: 341px;
+    height: 510px;
+    border: 0px solid #444;
     border-radius: 0 0 20px 20px;
     background-image: url(../images/Custom_block/background.svg);
     display: none;
@@ -797,10 +874,13 @@ body {
     margin-left: 80px;
 }
 
+
+
 #select_field2__second_page_div1,
 #select_field2__second_page_div2,
 #select_field2__second_page_div3 {
     display: flex;
+    justify-content: center;
     margin-bottom: 8px;
 }
 
@@ -808,11 +888,13 @@ body {
     display: flex;
     justify-content: center;
     margin: 17px 151px 22px 120px;
+    font-size: 24px;
 }
 
 #select_field2__second_page_p2,
 #select_field2__second_page_p3 {
     margin: 5px 0 8px 10px;
+    font-size: 15px;
 }
 
 #select_field2__second_page_btn {
@@ -824,6 +906,10 @@ body {
 #select_field2__second_page_btn img {
     width: 39px;
     height: 66px;
+}
+
+#select_field2__second_page_hr {
+    padding: 0 40px;
 }
 
 
@@ -849,6 +935,7 @@ body {
     display: flex;
     justify-content: center;
     margin: 16px 151px 0px 120px;
+    font-size: 24px;
 }
 
 #select_field3__second_page_div {
@@ -895,6 +982,16 @@ body {
     /* background-color: #FFFFFF; */
     background-image: url(../images/Custom_block/menu-background.svg);
     /* position: relative; */
+}
+
+.center_display_second_page_box {
+    border: 2px solid #DEAD9C;
+    border-radius: 10px;
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    margin-top: 280px;
+    margin-left: 730px;
 }
 
 /* ↓↓右邊側邊欄位區塊↓↓ */
@@ -945,14 +1042,14 @@ body {
     left: 0;
     top: 0;
     margin-left: 80px;
-    display: none;
+    /* display: none; */
 }
 
 #left_sidebar_three_page_div1_p {
     display: flex;
     justify-content: center;
     margin: 16px 151px 28px 120px;
-
+    font-size: 24px;
 }
 
 #left_sidebar_three_page_div1_1 div {
@@ -964,6 +1061,7 @@ body {
 #left_sidebar_three_page_div1_2 p {
     margin-left: 10px;
     margin-top: 5px;
+    font-size: 15px;
 }
 
 #left_sidebar_three_page_div1_2 div {
@@ -981,6 +1079,10 @@ body {
 #left_sidebar_three_page_div1_3 p {
     margin-left: 10px;
     margin-top: 5px;
+}
+
+#left_sidebar_three_page_div1_hr {
+    padding: 0 40px;
 }
 
 
@@ -1019,6 +1121,7 @@ body {
     display: flex;
     justify-content: center;
     margin: 27px 131px 18px 130px;
+    font-size: 24px;
 }
 
 
@@ -1070,12 +1173,14 @@ body {
     display: flex;
     justify-content: center;
     margin: 16px 100px 0px 100px;
+    font-size: 24px;
 }
 
 #left_sidebar_three_page_div3_div_p {
     display: flex;
     justify-content: center;
     margin: 33px 100px 10px 100px;
+    font-size: 15px;
 }
 
 #left_sidebar_three_page_div3_div_1 {
@@ -1092,13 +1197,21 @@ body {
     margin-bottom: 8px;
 }
 
+#left_sidebar_three_page_div3_hr {
+    padding: 0 40px;
+}
+
 #left_sidebar_three_page_div3_div_2 {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     margin-top: 17px;
-    margin: 17px 30px 0 30px;
+    margin: 17px 10px 0 30px;
     overflow: hidden;
+}
+
+#left_sidebar_three_page_div3_div_2 a {
+    margin-right: 30px;
 }
 
 #left_sidebar_three_page_div3_div_2 img {
@@ -1157,13 +1270,14 @@ body {
     left: 0;
     top: 0;
     margin-left: 80px;
-    display: none;
+    /* display: none; */
 }
 
 #left_sidebar_four_page_div1_p {
     display: flex;
     justify-content: center;
     margin: 16px 120px 34px 120px;
+    font-size: 24px;
 }
 
 
@@ -1220,6 +1334,7 @@ body {
     display: flex;
     justify-content: center;
     margin: 27.5px 120px 18px 120px;
+    font-size: 24px;
 }
 
 #left_sidebar_four_page_div2_1 {
@@ -1263,7 +1378,7 @@ body {
     left: 0;
     top: 0;
     margin-left: 80px;
-    display: none;
+    /* display: none; */
 }
 
 #left_sidebar_four_page_div3_div1_p1 {
@@ -1329,4 +1444,9 @@ body {
     position: absolute;
     top: 0;
     right: -30px;
+}
+
+#left_sidebar_four_page_div3_div1_hr {
+    /* height: 50px; */
+    padding: 0 40px;
 }
