--- a/css/Customization.css
+++ b/css/Customization.css
@@ -808,7 +808,7 @@ body {
     border: 0px solid #444;
     border-radius: 0 0 20px 20px;
     background-image: url(../images/Custom_block/background.svg);
-    /* display: none; */
+    display: none;
     position: absolute;
     left: 0;
     top: 0;
@@ -928,7 +928,7 @@ body {
     left: 0;
     top: 0;
     background-image: url(../images/Custom_block/background.svg);
-    display: none;
+    /* display: none; */
 }
 
 #select_field3__second_page p {
@@ -1092,7 +1092,7 @@ body {
     position: absolute;
     right: -30px;
     top: 0;
-    /* display: none; */
+    cursor: pointer;
 }
 
 
@@ -1147,6 +1147,7 @@ body {
     position: absolute;
     right: -30px;
     top: 0;
+    cursor: pointer;
 }
 
 /* ↑↑第二頁↑↑ */
@@ -1236,7 +1237,7 @@ body {
     position: absolute;
     right: -30px;
     top: 0;
-    /* display: none; */
+    cursor: pointer;
 }
 
 
@@ -1305,7 +1306,7 @@ body {
     position: absolute;
     top: 0;
     right: -30px;
-    /* display: none; */
+    cursor: pointer;
 }
 
 
@@ -1359,6 +1360,7 @@ body {
     position: absolute;
     top: 0;
     right: -30px;
+    cursor: pointer;
 }
 
 /* ↑↑第二頁↑↑ */
@@ -1378,7 +1380,7 @@ body {
     left: 0;
     top: 0;
     margin-left: 80px;
-    /* display: none; */
+    display: none;
 }
 
 #left_sidebar_four_page_div3_div1_p1 {
@@ -1444,6 +1446,7 @@ body {
     position: absolute;
     top: 0;
     right: -30px;
+    cursor: pointer;
 }
 
 #left_sidebar_four_page_div3_div1_hr {
