--- a/css/Customization.css
+++ b/css/Customization.css
@@ -64,6 +64,17 @@ body {
     height: auto; */
 }
 
+
+#main {
+    /* background-image: url(../images/Custom_block/Frame\ 37.svg); */
+    /* background-size:cover; */
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: auto;
+    /* width: 100%;
+    height: auto; */
+}
+
 #all {
     display: flex;
     justify-content: center;
@@ -149,7 +160,7 @@ body {
     display: flex;
     background-image: url(../images/Custom_block/background.svg);
     border: 0px solid #F9F4EE;
-    border-radius: 0 0 20px 20px;
+    border-radius: 0px 0 20px 20px;
     position: absolute;
     margin-left: 80px;
     display: none;
@@ -160,7 +171,8 @@ body {
     justify-content: center;
     margin-top: 16.5px;
     font-size: 24px;
-    /* font-family: Noto Serif TC ,sans-serif; */
+    font-family: 'Noto Sans TC', sans-serif;
+    font-weight: 900;
 }
 
 
@@ -194,7 +206,7 @@ body {
     flex-direction: column;
     background-image: url(../images/Custom_block/background.svg);
     border: 0px solid #F9F4EE;
-    border-radius: 0 0 20px 20px;
+    border-radius: 20px 0 20px 20px;
     position: absolute;
     margin-left: 80px;
     display: none;
@@ -254,12 +266,11 @@ body {
     flex-direction: column;
     background-image: url(../images/Custom_block/background.svg);
     border: 0px solid #F9F4EE;
-    border-radius: 0 0 20px 20px;
+    border-radius: 20px 0 20px 20px;
     position: absolute;
     margin-left: 80px;
     display: none;
-    /* overflow: hidden; */
-    /* overflow: auto; */
+    overflow: hidden;
 }
 
 .left_menu3_p {
@@ -352,7 +363,7 @@ body {
     flex-direction: column;
     background-image: url(../images/Custom_block/background.svg);
     border: 0px solid #F9F4EE;
-    border-radius: 0 0 20px 20px;
+    border-radius: 20px 0 20px 20px;
     position: absolute;
     margin-left: 80px;
     display: none;
@@ -461,7 +472,7 @@ body {
     flex-direction: column;
     background-image: url(../images/Custom_block/background.svg);
     border: 0px solid #F9F4EE;
-    border-radius: 0 0 20px 20px;
+    border-radius: 20px 0 20px 20px;
     position: absolute;
     margin-left: 80px;
     display: none;
@@ -514,7 +525,7 @@ body {
     max-width: 39px;
     max-height: 66px;
     position: absolute;
-    right: -30px;
+    right: -360px;
     top: -5px;
     display: none;
 }
@@ -806,7 +817,7 @@ body {
     width: 341px;
     height: 508px;
     border: 0px solid #444;
-    border-radius: 0 0 20px 20px;
+    border-radius: 0px 0 20px 20px;
     background-image: url(../images/Custom_block/background.svg);
     display: none;
     position: absolute;
@@ -837,7 +848,7 @@ body {
 
 #select_field1__second_page a {
     margin-right: 20px;
-    margin-bottom: 80px;
+    margin-bottom: 36px;
 }
 
 .select_field1__second_page_img {
@@ -865,7 +876,7 @@ body {
     width: 341px;
     height: 510px;
     border: 0px solid #444;
-    border-radius: 0 0 20px 20px;
+    border-radius: 20px 0 20px 20px;
     background-image: url(../images/Custom_block/background.svg);
     display: none;
     position: absolute;
@@ -924,6 +935,7 @@ body {
     width: 341px;
     height: 508px;
     margin-left: 80px;
+    border-radius: 20px 0 20px 20px;
     position: absolute;
     left: 0;
     top: 0;
@@ -973,16 +985,33 @@ body {
 #center_display_second_page {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
-    border: pX solid #444;
+    /* align-items: flex-start; */
+    border: 0px solid #444;
     border-radius: 20px;
     width: 1058px;
     height: 510px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     /* margin-top: 86px; */
     /* background-color: #FFFFFF; */
     background-image: url(../images/Custom_block/menu-background.svg);
     /* position: relative; */
 }
+
+
+#center_display_second_page_make_img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#center_display_second_page_make_img img {
+    width: 440px;
+    height: 382px;
+
+}
+
 
 .center_display_second_page_box {
     border: 2px solid #DEAD9C;
@@ -992,7 +1021,28 @@ body {
     position: absolute;
     margin-top: 280px;
     margin-left: 730px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+#center_display_second_page_box1 {
+    width: 218px;
+    height: 228px;
+}
+
+
+#center_display_second_page_box2 {
+    width: 155px;
+    height: 174px;
+}
+
+#center_display_second_page_card1 {
+    width: 287px;
+    height: 321px;
+}
+
+
 
 /* ↓↓右邊側邊欄位區塊↓↓ */
 #right_sidebar_second_page {
@@ -1037,12 +1087,12 @@ body {
     width: 341px;
     height: 508px;
     background-image: url(../images/Custom_block/background.svg);
-    border-radius: 0 0 20px 20px;
+    border-radius: 0px 0 20px 20px;
     position: absolute;
     left: 0;
     top: 0;
     margin-left: 80px;
-    /* display: none; */
+    display: none;
 }
 
 #left_sidebar_three_page_div1_p {
@@ -1109,7 +1159,7 @@ body {
     height: 508px;
     border: 0px solid #444;
     background-image: url(../images/Custom_block/background.svg);
-    border-radius: 0 0 20px 20px;
+    border-radius: 20px 0 20px 20px;
     position: absolute;
     top: 0;
     left: 0;
@@ -1162,12 +1212,12 @@ body {
     height: 508px;
     border: 0px solid #444;
     background-image: url(../images/Custom_block/background.svg);
-    border-radius: 0 0 20px 20px;
+    border-radius: 20px 0 20px 20px;
     position: absolute;
     left: 0;
     top: 0;
     margin-left: 80px;
-    display: none;
+    /* display: none; */
 }
 
 #left_sidebar_three_page_div3_p1 {
@@ -1271,7 +1321,7 @@ body {
     left: 0;
     top: 0;
     margin-left: 80px;
-    /* display: none; */
+    display: none;
 }
 
 #left_sidebar_four_page_div1_p {
@@ -1323,7 +1373,7 @@ body {
     height: 510px;
     border: 0px solid #444;
     background-image: url(../images/Custom_block/background.svg);
-    border-radius: 0 0 20px 20px;
+    border-radius: 20px 0 20px 20px;
     position: absolute;
     top: 0;
     left: 0;
@@ -1375,12 +1425,12 @@ body {
     height: 510px;
     border: 0px solid #444;
     background-image: url(../images/Custom_block/background.svg);
-    border-radius: 0 0 20px 20px;
+    border-radius: 20px 0 20px 20px;
     position: absolute;
     left: 0;
     top: 0;
     margin-left: 80px;
-    display: none;
+    /* display: none; */
 }
 
 #left_sidebar_four_page_div3_div1_p1 {
@@ -1452,4 +1502,228 @@ body {
 #left_sidebar_four_page_div3_div1_hr {
     /* height: 50px; */
     padding: 0 40px;
+}
+
+
+/* ↑↑第三頁↑↑ */
+
+/* ↑↑左邊側邊選擇欄位↑↑ */
+
+
+
+/* ------------------------------------------------ */
+
+
+/* 商品詳細頁 */
+
+/* ↓↓第一層↓↓ */
+
+#product_details_page {
+    background-image: url(../images/Custom_block/menu-background.svg);
+    background-position: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: auto;
+}
+
+#product_details_page_tab {
+    display: flex;
+    justify-content: start;
+    margin-left: 206px;
+    margin-top: 37.5px;
+    margin-bottom: 59px;
+}
+
+#product_details_page_tab_div1 {
+    display: flex;
+    justify-content: center;
+}
+
+#product_details_page_tab_div1_left {
+    display: flex;
+    flex-direction: column;
+}
+
+#product_details_page_tab_div1_left a {
+    margin-bottom: 81px;
+    margin-right: 32px;
+}
+
+#product_details_page_tab_div1_left img {
+    width: 196px;
+    height: 196px;
+}
+
+#product_details_page_tab_div1_middle img {
+    width: 562px;
+    height: 759px;
+}
+
+#product_details_page_tab_div1_product {
+    display: flex;
+    flex-direction: column;
+}
+
+
+#product_details_page_tab_div1_product_name {
+    width: 367px;
+    height: 62px;
+    margin-top: 36px;
+    margin-left: 106px;
+}
+
+#product_details_page_tab_div1_product_name p {
+    font-size: 44px;
+}
+
+#product_details_page_tab_div1_product_description {
+    width: 493px;
+    height: 58px;
+    margin-top: 34px;
+    margin-left: 120px;
+    font-size: 18px;
+}
+
+#product_details_page_tab_div1_product_cash {
+    width: 195px;
+    height: 51px;
+    margin-top: 44px;
+    margin-left: 116px;
+    font-size: 36px;
+}
+
+#product_details_page_tab_div1_product_increase_or_decrease {
+    width: 180px;
+    height: 56px;
+    margin-top: 62px;
+    margin-left: 116px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px solid #E1CBAA;
+    border-radius: 5px;
+}
+
+#product_details_page_tab_div1_produc_minus_sign {
+    width: 40px;
+    height: 56px;
+}
+
+#product_details_page_tab_div1_produc_minus_sign button {
+    border: 0px;
+}
+
+#product_details_page_tab_div1_produc_plus_sign {
+    width: 40px;
+    height: 56px;
+}
+
+#product_details_page_tab_div1_produc_plus_sign button {
+    border: 0px;
+}
+
+#product_details_page_tab_div1_shoopping_cart {
+    width: 322px;
+    height: 65px;
+    margin-top: 102px;
+    margin-left: 110px
+}
+
+#product_details_page_tab_div1_give_gifts {
+    width: 322px;
+    height: 65px;
+    margin-top: 34px;
+    margin-left: 110px;
+}
+
+/* ↓↓第二層↓↓ */
+
+#product_details_page_tab_div2 {
+    height: 62px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 179px;
+    margin-top: 256px;
+}
+
+#product_details_page_tab_div2 p {
+    font-size: 44px;
+}
+
+#product_details_page_tab_div3 {
+    display: flex;
+    justify-content: center;
+}
+
+
+#product_details_page_tab_div3_img img {
+    width: 493px;
+    height: 462px;
+}
+
+#product_details_page_tab_div3_p1 {
+    margin-left: 533px;
+    margin-top: 31px;
+}
+
+#product_details_page_tab_div3_p1 p {
+    font-size: 36px;
+}
+
+#product_details_page_tab_div3_2 {
+    width: 439px;
+    height: 174px;
+    margin-top: 70px;
+    margin-left: 159px;
+    margin-bottom: 136px;
+}
+
+#product_details_page_tab_div3_2 p {
+    font-size: 18px;
+}
+
+
+/* ↓↓第三層↓↓ */
+
+#product_details_page_tab_div4 {
+    display: flex;
+    justify-content: right;
+    margin-top: 129px;
+}
+
+#product_details_page_tab_div4_div1 {
+    margin-right: 176px;
+    margin-bottom: 50px;
+    display: flex;
+    /* flex-direction: column;   */
+}
+
+#product_details_page_tab_div4_div1 div{
+    display: flex;
+    /* justify-content: flex-end; */
+}
+
+#product_details_page_tab_div4_div1 p{
+    font-size: 44px;
+}
+
+#product_details_page_tab_div4_div2 {
+    width: 493px;
+    height: 174px;
+    margin-right: 201px;
+    margin-top: 50px;
+}
+
+#product_details_page_tab_div4_div2 p{
+    font-size: 18px;
+}
+
+#product_details_page_tab_div4_img {
+    margin-right: 266px;
+}
+
+#product_details_page_tab_div4_img img {
+    width: 493px;
+    height: 462px;
 }
