--- a/css/index.css
+++ b/css/index.css
@@ -171,21 +171,67 @@ section {
 #BANNER {
     width: 100%;
     /* height: 100%; */
-    background-image: url(../index_images/banner---bg.png);
+    background-image: url(../index_images/banner---background.png);
     background-size: cover;
     text-align: center;
     background-repeat: no-repeat;
     background-position:center;
+    overflow: hidden;
+}
+
+.choc {
+    position: relative;
+}
+.choc .title_white{
+    position: absolute;
+    right:0.5rem;
+    top:-40vh;
+}
+.choc .title_br{
+    position: absolute;
+    right:0.5rem;
+    top:-30vh;
+
+}
+.olate {
+    position: relative;
+}
+.olate .title_white{
+    position: absolute;
+    left:0.5rem;
+    top:-40vh;
+}
+.olate .title_br{
+    position: absolute; 
+    left:0.5rem;
+    top:-30vh;
 }
 
 .banner-content {
 align-items: center;
-position: relative;
+display: flex;
+font-family: "Lucida Bright";
+
+}
+.banner-content .title_white{
+    font-size: 18.2vw;
+    text-align: center;
+    color: white;
+    
+    
+}
+.banner-content .title_br{
+    z-index: 2;
+    font-size: 18.2vw;
+    text-align: center;
+    color: var(--block_brown);
+   
+
 }
 
 
 .banner-content .arch {
-    
+   
     z-index:1;
     width: 380px;
     /* 拱门的宽度 */
@@ -205,12 +251,19 @@ position: relative;
     
 }
 
-.banner-content .arch img{
-    z-index: 5;
+
+
+.banner-content .arch_wrap{
+    position: relative;
+    
+}
+
+.banner-content .circle_text{
     position: absolute;
-    top:75%;
+    z-index: 5;
+    top:70%;
     left:60%;
-    width: 260px;
+    width: 65%;
     margin: 0 auto; /* 图片居中 */
     display: block; /* 将图片作为块级元素 */
     animation: spin 10s linear infinite; /* 启动动画 */
@@ -241,7 +294,7 @@ position: relative;
 
 
 .cust_item{
-    padding-top: 390px;
+    padding-top: 45vh;
     /* left:50%; */
     display: flex;
     align-items: center;
@@ -262,7 +315,7 @@ position: relative;
     
     background-color: var(--primary_pink);
     width: 200px;
-    height:180px;
+    height:20vh;
     clip-path: polygon(10% 38%, 90% 38%, 100% 50%, 90% 62%, 10% 62%, 0% 50%);
     display: flex;
     align-items: center;
@@ -352,16 +405,17 @@ position: relative;
     color: var(--text);
     font-size: 1rem;
     align-items: flex-start;
-    font-style: 'Noto+Sans+TC';
-    font-weight: 400;
+    font-family: 'Noto+Sans+TC';
+    font-weight: 500;
+    letter-spacing: 1rem;
 
 }
 .text1,.text2,.text3,.text4{
     writing-mode: vertical-rl; /* 设置文字竖排，从右到左 */
             text-align: start;        /* 文字居中对齐 */
-            border: 1px solid black;   /* 边框，方便查看效果 */
+            border: 0px solid black;   /* 边框，方便查看效果 */
             padding: 10px;             /* 内边距 */
-            height: 300px;             /* 高度，可以根据需要调整 */
+            height: 100%;             /* 高度，可以根据需要调整 */
             width: 50px;             
 }
 
