--- a/css/Customization.css
+++ b/css/Customization.css
@@ -566,6 +566,13 @@ body {
     /* position: relative; */
 }
 
+@media(max-width:1100px){
+    .middle {
+       width: 800px;
+        /* height: auto; */
+    }
+}
+
 .middle_img1 {
     width: 520px;
     height: 520px;
@@ -610,6 +617,13 @@ body {
     margin-bottom: 20px;
     margin-left: 730px;
 }
+
+@media(max-width:1100px) {
+    .middle_box {
+        margin-left: 500px;
+    }
+}
+
 
 
 /* ↑↑中間區塊↑↑ */
@@ -731,6 +745,14 @@ body {
 
 #Prompt_field_img0 {
     cursor: pointer;
+}
+
+@media(max-width:1100px) {
+    #Prompt_field li {
+        width: auto;
+        height: auto;
+        margin: 30px 30px 0px 30px;
+    }
 }
 
 /* 
@@ -999,6 +1021,13 @@ body {
     /* position: relative; */
 }
 
+@media(max-width:1100px){
+    #center_display_second_page {
+        width: 800px;
+        /* height: 450px; */
+    }
+}
+
 
 #center_display_second_page_make_img {
     display: flex;
@@ -1024,6 +1053,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media(max-width:1100px) {
+    .center_display_second_page_box {
+        margin-left: 550px;
+    }
 }
 
 #center_display_second_page_box1 {
@@ -1699,12 +1734,12 @@ body {
     /* flex-direction: column;   */
 }
 
-#product_details_page_tab_div4_div1 div{
+#product_details_page_tab_div4_div1 div {
     display: flex;
     /* justify-content: flex-end; */
 }
 
-#product_details_page_tab_div4_div1 p{
+#product_details_page_tab_div4_div1 p {
     font-size: 44px;
 }
 
@@ -1715,7 +1750,7 @@ body {
     margin-top: 50px;
 }
 
-#product_details_page_tab_div4_div2 p{
+#product_details_page_tab_div4_div2 p {
     font-size: 18px;
 }
 
