--- a/css/shop.css
+++ b/css/shop.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*UTF-8 一定要在行數1 */
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&Noto+Sans+TC:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&Noto+Sans+TC+Noto+Serif+TC:wght@100..900&display=swap');
 
 /* @import只允許@charset在上面 註解行也會影響*/
 @font-face {
@@ -67,10 +67,10 @@ a {
 /* 變數 */
 :root {
     /* 字 */
-    --textdark:##3F1A09;
-    --text:#6B3B20;
-    --primary_pink:#F1BFC1;
-    --block_brown:#E1CBAA;
+    --textdark: ##3F1A09;
+    --text: #6B3B20;
+    --primary_pink: #F1BFC1;
+    --block_brown: #E1CBAA;
 }
 
 
@@ -86,64 +86,149 @@ section {
     /* 用vh 不要用vw不好控制 */
 
 }
-.img_container{
-    
+
+.img_container {
+    height: 100vh;
+    width: 100vw;
+    background-image: url(../images/shop_images/shop_banner.jpg);
+    background-color: transparent;
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+
+}
+
+#items_content {
+    position: relative;
+    height: auto;
+    background-image:url(../index_images/bg-w.png);
+}
+
+.filter {
+    position: absolute;
+    top: 0;
+    height: 80px;
+    width: 80%;
+    /* background-color: #F1BFC1; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 2px solid var(--block_brown);
+}
+
+.filter_list {
+    padding: 35px 20px 20px 20px;
+}
+
+ul.drop-down-menu {
+    display: flex;
+    border-bottom: var(--block_brown);
+    font-size: 1.2rem;
+    font-family: "Noto Serif TC", "Noto Serif TC", serif;
+    font-weight: 900;
+}
+
+ul.drop-down-menu ul {
+    /* border-bottom: #ccc 1px solid; */
+    position: absolute;
+    z-index: 99;
+    /* min-width: 100px; */
+    /*隱藏次選單*/
+
+}
+
+ul.drop-down-menu a {
+    width: 100%;
+    color: var(--text);
+    padding: 20px 5vw;
+
+}
+
+ul.drop-down-menu ul {
+    display: none;
+    background-color: white;
+    border: 2px solid var(--block_brown);
+}
+
+ul.drop-down-menu>li {
+    float: left;
+    /* 只有第一層是靠左對齊*/
+}
+
+ul.drop-down-menu ul li {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    font-size: 1rem;
+
+}
+
+ul.drop-down-menu ul li:hover {
+    background-color: #E1CBAA;
+}
+
+ul.drop-down-menu li:hover>ul {
+    display: block;
+}
+
+
+
+
+
+
+
+
+.box__list img {
     object-fit: cover;
-    
-}
-
-.filter{
-    height: 20px;
-}
-
-.item_content{
+    /* 自動剪裁 尺寸適應外框 */
+    /* width: 100%; 共用區已設定 */
     height: 100%;
-}
-    .box__list img {
-        object-fit: cover;
-        /* 自動剪裁 尺寸適應外框 */
-        /* width: 100%; 共用區已設定 */
-        height: 100%;
-    }
-
-
-
-.item {
-    border: 2px solid #F1BFC1;
-    flex: 1 1 calc(33.333% - 16px); /* 每行顯示三個項目，減去間距 */
-    box-sizing: border-box;
-    align-content:flex-start;
-    
-    border: 1px solid #ddd; /* 可選：為項目添加邊框 */
-    padding: 16px; /* 可選：為項目添加內邊距 */
-    min-height: 20vh;
-    min-width: 160px;
 }
 
 
 .items_list {
-    padding: 10vw;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr); 
-    gap: 5vw; 
-    width: 80%;
+    padding: 50px 5vw;
+    width: 100%;
     max-width: 1440px;
     /* ;list通常最大寬度是絕對搭配相對單位,設定絕對單位] */
     display: flex;
-    padding-bottom: 30px;
+    flex-wrap: wrap;
+    height: 100%;
+    /* align-content:flex-start; */
 }
 
-.item_pic.box{
+.item {
+    flex: 1 1 calc(33.333% - 20px);
+    /* 每行顯示 3 個項目，並考慮間隙 */
+    box-sizing: border-box;
+    padding: 40px;
+    text-align: start;
+    min-width: 200px;
+}
+
+
+
+.item_pic.box {
     height: 20vh;
     width: auto;
 }
-.item_name{
+
+.item_name {
     font-weight: 600;
     font-family: "Noto Serif TC";
     font-size: 1rem;
+    font-weight: 700;
+    padding: 5px 0;
 }
-.item_text{
-    font-size: 0.8rem;
+
+.item_price {
+    font-family: "inter";
+    font-size: 0.9rem;
+    padding: 4px 0;
+}
+
+.item_text {
+    font-size: 0.7rem;
     font-family: 'Inter';
     overflow: hidden;
     /* 文字溢出時出現省略號,若有設定line-clamp時,瀏覽器會自動加入 */
@@ -154,4 +239,119 @@ section {
     -webkit-box-orient: vertical;
     /* 定義box垂直布局 */
     -webkit-line-clamp: 2;
+}
+
+.change_page {
+    width: 100%;
+    display: flex;
+    height: 40px;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 80px;
+}
+
+#pages_num {
+    display: flex;
+
+}
+
+#pages_num a {
+    padding: 20px;
+}
+
+.next_pages {
+    padding-left: 30px;
+}
+.next_pages img{
+    width: 80px;
+}
+
+.next_page_text {
+    padding: 20px;
+}
+
+
+
+
+
+footer {
+    width: 100%;
+    background-image: url(../images/foot--bg.svg);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+footer .wrap {
+    width: 80vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.bottom_nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+    padding: 20px;
+}
+
+footer .logo {
+    width: 120px;
+}
+
+.bottom_nav .menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 0.8rem;
+}
+.bottom_nav .menu li {
+    padding: 1.2vw;
+}
+.icon {
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 120px;;
+    
+}
+
+.icon a {
+    width: 30px;
+    height: 30px;
+    
+    
+}
+
+.icon .fb {
+    background-image: url(../images/footer_icon_fb.svg);
+    background-position: center; /* 置中背景圖片 */
+    background-size: cover; /* 背景圖片填滿整個元素 */
+    background-repeat: no-repeat; /
+
+}
+
+.icon .ig {
+    background-image: url(../images/footer_icon_ig.svg);
+    background-position: center; /* 置中背景圖片 */
+    background-size: cover; /* 背景圖片填滿整個元素 */
+    background-repeat: no-repeat; /
+}
+
+.icon .x {
+    background-image: url(../images/footer_icon_x.svg);
+    background-position: center; /* 置中背景圖片 */
+    background-size: cover; /* 背景圖片填滿整個元素 */
+    background-repeat: no-repeat; /
+}
+
+.copyRight {
+    color: white;
+    font-family: "Noto Serif TC", "Noto Serif TC", serif;
+    padding: 20px 0;
 }
