--- a/css/Customization.css
+++ b/css/Customization.css
@@ -162,7 +162,8 @@ body {
     border: 0px solid #F9F4EE;
     border-radius: 0px 0 20px 20px;
     position: absolute;
-    margin-left: 80px;
+    /* margin-left: 80px; */
+    left: 80px;
     display: none;
 }
 
